namespace BonusBotConnector.Client.Protos
{
syntax = "proto3";

import "Protos/Shared.proto";

option csharp_namespace = "BonusBotConnector_Client";

service MessageToUser {
  rpc Send (MessageToUserRequest) returns (MessageToUserRequestReply);
  rpc SendEmbed (EmbedToUserRequest) returns (MessageToUserRequestReply);
}

message MessageToUserRequest {
  string text = 1;
  uint64 guildId = 2;
  uint64 userId = 3; 
}

message EmbedToUserRequest {
    uint64 guildId = 1;
    uint64 userId = 2; 
    string author = 3;
    repeated EmbedField fields = 4;
    // Use -1 to not use a color or to use default (255) if other color is set
    sint32 colorR = 5;
    // Use -1 to not use a color or to use default (255) if other color is set
    sint32 colorG = 6;
    // Use -1 to not use a color or to use default (255) if other color is set
    sint32 colorB = 7;
    string title = 8;
}

message MessageToUserRequestReply {
    string errorMessage = 1;
}
}